address build errors, fix unit tests